--- a/style.css
+++ b/style.css
@@ -111,12 +111,8 @@ i {
     margin: 0px;
 }
 
-title,
-p {
-    text-align: center;
-}
 
-.services .services-content {
+/* .services .services-content {
     display: flex;
 }
 
@@ -131,4 +127,38 @@ p {
 
 .about-content {
     display: flex;
+} */
+.services-parent{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 100px 100px;
+    gap: 10px;
+    margin: 50px 0;
+}
+.image img{
+    width: 100%;
+    height: 200%;
+}
+h2 + p{
+    text-align: center;
+    margin-top: -40px;
+}
+.servcies-child{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+/* start-about */
+.about-parent{
+    display: flex;
+    justify-content: space-between;
+}
+.text{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.text p {
+    margin: 10px 0;
 }
